Tidy up some Intellij gripes